Addressed the changes brough up in the PR comments - correct color, changing the status of declined nodes so the expanded node text reads "Declined", and a whole lot of time spent brushing up on CSS to figure out how to vertically align a nested object. Learning a lot!

--- a/src/components/Node/Node.module.scss
+++ b/src/components/Node/Node.module.scss
@@ -29,7 +29,7 @@
   }
 
   &.declined {
-    background-color: $black;
+    background-color: #404040;
   }
 
   .icon {
@@ -66,6 +66,6 @@
   }
 
   &.childDeclined {
-    border: 1px solid $black
+    border: 1px solid #404040
   }
 }
