--- a/src/styles/_nodes.scss
+++ b/src/styles/_nodes.scss
@@ -35,6 +35,8 @@
 .iconAndLabel {
   flex-grow: 1;
   text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 .statusIcon {
